--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,7 +4,7 @@ ARG DOCKER_REPO=urs-docker
 FROM $REGISTRY/$DOCKER_REPO/groovy:jre16
 
 # https://docs.docker.com/engine/reference/builder/#understand-how-arg-and-from-interact
-# ARG REGISTRY
+ARG REGISTRY
 
 # dummy 
 RUN mkdir -p /home/groovy/webapp/
