--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
         run:  cd src && jf audit
 
       - name: Build webapp and scan generated artifact before upload
-        run: jf rt mvn -f src/ clean install --no-transfer-progress  --scan=true
+        run: jf rt mvn -f src/ clean install --no-transfer-progress
         
       - name: Publish Build Info
         run: |
