--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -26,7 +26,7 @@ jobs:
 
       - uses: jfrog/frogbot@v2
         env:
-          JF_INSTALL_DEPS_CMD: "mvn install"
+          # JF_INSTALL_DEPS_CMD: "mvn install"
 
           # [Mandatory] 
           # JFrog platform URL
@@ -34,11 +34,11 @@ jobs:
 
           # [Mandatory if JF_ACCESS_TOKEN is not provided] 
           # JFrog username with 'read' permissions for Xray. Must be provided with JF_PASSWORD 
-          # JF_USER: ${{ secrets.JF_USER }}
+          JF_USER: ${{ secrets.JF_USER }}
 
           # [Mandatory if JF_ACCESS_TOKEN is not provided] 
           # JFrog password. Must be provided with JF_USER 
-          # JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
+          JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
 
           # [Manadatory] 
           # The GitHub token automatically generated for the job
