--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -57,4 +57,4 @@ jobs:
           # [Optional] 
           # JFrog project. Learn more about it here: https://www.jfrog.com/confluence/display/JFROG/Projects
           # JF_PROJECT: <project-key>
-          JF_WORKING_DIR: src/application/ 
+          JF_WORKING_DIR: src/library/ 
