--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -8,8 +8,8 @@ permissions:
   pull-requests: write
   contents: read
 jobs:
-  scan-pull-request:
-#  create-fix-pull-requests
+#  scan-pull-request:
+  create-fix-pull-requests
     runs-on: ubuntu-latest
     environment: frogbot
     steps:
