--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 jobs:
 #  scan-pull-request:
-  create-fix-pull-requests
+  create-fix-pull-requests:
     runs-on: ubuntu-latest
     environment: frogbot
     steps:
